# cargo-semantic-release-template

./: CHANGELOG.md  Cargo.toml  README.md  package.json  release.config.js
.github/workflows/: build-and-deploy.yml
src/: lib.rs
